--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
-    "react-use": "^17.4.0"
+    "react-use": "^17.4.0",
+    "vitest": "^0.29.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
