Add stylelint step in GitHub actions

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -22,5 +22,7 @@ jobs:
         run: npm run build
       - name: lint code
         run: npm run lint
+      - name: lint style
+        run: npm run stylelint
       - name: tests
         run: npm run test
