--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "test": "vitest"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
+    "nanoid": "^4.0.2",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
