--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@react-three/cannon": "^6.5.2",
+    "@react-three/drei": "^9.61.3",
+    "@react-three/fiber": "^8.12.0",
     "classnames": "^2.3.2",
     "nanoid": "^4.0.2",
     "normalize.css": "^8.0.1",
@@ -19,12 +22,14 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-use": "^17.4.0",
+    "three": "^0.151.2",
     "vitest": "^0.29.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.31",
     "@types/react-dom": "^18.0.11",
     "@types/react-router-dom": "^5.3.3",
+    "@types/three": "^0.150.0",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
     "@vitejs/plugin-react-swc": "^3.2.0",
