--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-use": "^17.4.0",
+    "socket.io-client": "^4.6.1",
     "three": "^0.151.2",
     "vitest": "^0.29.8"
   },
